--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 php:
   - 5.5
-  - 5.4
+ # - 5.4  # Disable testing on 5.4 until Travis updates php to 5.4.20
 before_script:
   - composer self-update
   - composer install --dev
