--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ Icon
 # Project-specific
 docs
 vendor
-tests/_log
+tests/_log/*
+!tests/_log/.gitkeep
+
 
 # Allows to have local phpDoc settings independent of what's in the repo
 phpdoc.xml
