[fix] Fix namespace mapping in composer.json and in filesystem

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
     "phpdocumentor/phpdocumentor": "~2.1"
   },
   "autoload": {
-    "psr-0": { "Enumeration\\": "src" }
+    "psr-0": { "Dreamscapes\\": "src" }
   }
 }
