--- a/codeception.yml
+++ b/codeception.yml
@@ -1,11 +1,10 @@
+actor: Tester
 paths:
-  tests: tests
-  log: tests/_log
-  data: tests/_data
-  helpers: tests/_helpers
+    tests: tests
+    log: tests/_output
+    data: tests/_data
+    helpers: tests/_support
 settings:
-  bootstrap: _bootstrap.php
-  suite_class: \PHPUnit_Framework_TestSuite
-  colors: true
-  memory_limit: 1024M
-  log: true
+    bootstrap: _bootstrap.php
+    colors: true
+    memory_limit: 1024M
