--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ php:
 before_script:
   - composer self-update
   - composer install --dev
-script: vendor/bin/codecept run unit
+script:
+ - vendor/bin/codecept run unit
+ - vendor/bin/phpcs --standard=PSR2 -v src tests
