--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: php
 php:
+- 5.6
 - 5.5
 - 5.4
 before_script:
@@ -8,3 +9,6 @@ before_script:
 script:
 - vendor/bin/codecept run unit
 - vendor/bin/phpcs --standard=PSR2 -v src tests
+matrix:
+  allow_failures:
+  - php: 5.6
