--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "php": ">=5.4.0"
   },
   "require-dev": {
-    "codeception/codeception": "~2",
     "squizlabs/php_codesniffer": "~1",
-    "phpdocumentor/phpdocumentor": "~2.7"
+    "phpdocumentor/phpdocumentor": "~2.7",
+    "phpunit/phpunit": "~4"
   },
   "autoload": {
     "psr-0": { "Dreamscapes\\": "src" }
