--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_script:
 - composer self-update
 - composer install --dev
 script:
-- vendor/bin/codecept run unit
-- vendor/bin/phpcs --standard=PSR2 -v src tests
+- make lint
+- make test
