--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ php:
 - 5.5
 - 5.4
 before_script:
-- composer self-update
 - composer install --dev
 script:
 - make lint
 - make test
+after_success:
+- '[[ -n "${TRAVIS_TAG}" ]] && make gh-pages'
+env:
+  global:
+    secure: BC2nXaBIFznNBCA6klgiuYBzUX4+3odZhwfWZDjOdAdYR8pWmd8btSFd3JHsRIZ0BopRao0TXVGRARQkdP/FE0W0z2zDuAieH7MN5/jRbUOzZ042+80i617zsxvtQh0/fEjFLl8UL+IKsHkMIPoZ/c1DlQPWmQ87Dsw1tarXDGQ=
