--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "require-dev": {
     "squizlabs/php_codesniffer": "~1",
     "phpdocumentor/phpdocumentor": "~2.7",
-    "phpunit/phpunit": "~4"
+    "phpunit/phpunit": "~4",
+    "satooshi/php-coveralls": "~0.6"
   },
   "autoload": {
     "psr-0": { "Dreamscapes\\": "." }
